--- a/views/login.html
+++ b/views/login.html
@@ -88,10 +88,7 @@ Bootstrap Select
                     },
                     function (data, status) {
                         if (data == "OK") {
-                            self.location.href = "/admin/"
-                        }
-                        if (data == "YES") {
-                            self.location.href = "/usershow"
+                            self.location.href = "/web/"
                         }
                     });
             }
