--- a/views/drvmag.html
+++ b/views/drvmag.html
@@ -30,13 +30,13 @@
 
     <div id="app">
         <div class="row">
-            <div class="col-md-4" v-for="c in ob">
+            <div class="col-md-4" v-for="c in ob.Drv">
                 <!--设备显示面板-->
                 <div class="panel" style="box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5);">
                     <div class="panel-title">
                         <h3 class="panel-title">
                             <span class="badge" style="float: left;position:absolute;text-align: right;right: 5%;">
-                                <a :href="'/admin/drvdot?type=drvdot&drv=' + c.Name ">
+                                <a :href="'/web/drvdot?type=drvdot&drv=' + c.Name ">
                                     管理数据点
                                 </a>
                             </span>
@@ -47,17 +47,18 @@
                         <ul class="list-unstyled activity-timeline">
                             <li>
                                 <i class="fa fa-hdd-o activity-icon"></i>
-                                <span class="timestamp">创建时间</span>
+                                <span class="timestamp">创建时间：</span>
                                 <span class="timestamp">{{c.Time}}</span>
                             </li>
                             <br>
                             <li>
                                 <i class="fa fa-hdd-o activity-icon"></i>
-                                <span class="timestamp">协议类型</span>
-                                <span class="timestamp">{{c.Type}}</span>
+                                <span class="timestamp">协议类型：</span>
+                                <span class="timestamp">{{c.Packtype}}</span>
                             </li>
                         </ul>
                         <div class="pull-right">
+                            <a class="btn btn-primary btn-xs" :href="'/web/drvpic?drv=' + c.Name ">组态图</a>
                             <button class="btn btn-primary btn-xs">修改</button>
                             <button class="btn btn-danger btn-xs">删除</button>
                         </div>
@@ -90,22 +91,39 @@
                         <h4 class="modal-title">新建设备</h4>
                     </div>
                     <div class="modal-body">
-                        <form>
-                            <div class="form-group">
-                                <label for="recipient-name" class="control-label">设备名称</label>
-                                <input type="text" class="form-control" id="drv-name">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="recipient-name" class="control-label">设备名称</label>
+                                    <input type="text" class="form-control" id="drv-name">
+                                </div>
+                                <div class="form-group">
+                                    <label for="message-text" class="control-label">服务端口</label>
+                                    <input type="text" class="form-control" id="drv-port" value="2020"></input>
+                                </div>
+                                <div class="form-group">
+                                    <label for="message-text" class="control-label">协议类型</label>
+                                    <select class="form-control" id="drv-type">
+                                        <option value="态神">态神</option>
+                                        <option value="MODBUS">MODBUS</option>
+                                    </select>
+                                </div>
                             </div>
-                            <div class="form-group">
-                                <label for="message-text" class="control-label">服务端口</label>
-                                <input type="text" class="form-control" id="drv-port" value="2020"></input>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="recipient-name" class="control-label">设备地址</label>
+                                    <input type="text" class="form-control" id="drv-addr" value="1"></input>
+                                </div>
+                                <div class="form-group">
+                                    <label for="message-text" class="control-label">读取间隔（秒）</label>
+                                    <input type="text" class="form-control" id="drv-spltime" value="30"></input>
+                                </div>
+                                <div class="form-group">
+                                    <label for="message-text" class="control-label">重连时间（秒）</label>
+                                    <input type="text" class="form-control " id="drv-rtime" value="10"></input>
+                                </div>
                             </div>
-                            <div class="form-group">
-                                <label for="message-text" class="control-label">协议类型</label>
-                                <input type="text" class="form-control " id="drv-type" value="MODBUS"></input>
-                            </div>
-                            <div>设备说明</div>
-                            <textarea class="form-control" placeholder="textarea" rows="2" id="drv-info"></textarea>
-                        </form>
+                        </div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" @click="addnewdrv" class="btn btn-primary">添加</button>
@@ -131,74 +149,53 @@
                 getdrvdot: function (drv) {
                     var self = this;
                     self.drvname = drv
-                    $.get("/admin/addinfo",
+                    $.get("/web/addinfo",
                         {
                             type: "drvdot",
                             drv: drv,
                         })
                 },
                 addnewdrv: function () {
+                    var self = this;
                     var name = $("#drv-name").val();
                     var port = $("#drv-port").val();
                     var types = $("#drv-type").val();
-                    var info = $("#drv-info").val();
+                    var addr = $("#drv-addr").val();
+                    var rtime = $("#drv-rtime").val();
+                    var spltime = $("#drv-spltime").val();
                     if (name.length < 2) {
                         alert("设备名称长度必须大于2")
                     }
                     else {
-                        $.post("/admin/drvmag",
+                        for (J=0;J< self.ob.Drv.length;J++) {
+                            if (name == self.ob.Drv[J].Name) {
+                                alert("设备名称已存在")
+                                return
+                            }
+                        }
+                        if(types == "MODBUS"){
+                            for (J=0;J< self.ob.Drv.length;J++) {
+                            if (port == self.ob.Drv[J].Port && addr == self.ob.Drv[J].Addr) {
+                                alert("MODBUS设备不允许相同端口上存在地址相同的设备，请修改！")
+                                return
+                            }
+                            }
+                        }
+                        $.post("/web/drvmag",
                             {
                                 type: "creatnewdrv",
                                 name: name,
                                 port: port,
-                                types: types,
-                                info: info
+                                packtype: types,
+                                addr: addr,
+                                rtime: rtime,
+                                spltime: spltime,
+                                rcount: 0
                             },
                             function (data, status) {
-                                alert("数据：" + data + "\n状态：" + status);
+                                alert(data);
                             });
 
-                    }
-                },
-                adddrvdot: function () {
-                    var self = this;
-                    var name = $("#dotname").val();
-                    var dtype = $("#dottype").val();
-                    var datatype = $("#datatype").val();
-                    var info = $("#dotinfo").val();
-                    if (name.length < 2) {
-                        alert("设备名称长度必须大于2")
-                    }
-                    else {
-                        $.post("/admin/drvmag",
-                            {
-                                type: "creatnewdot",
-                                name: name,
-                                dtype: dtype,
-                                datatype: datatype,
-                                info: info,
-                                drv: self.drvname
-                            },
-                            function (data, status) {
-                                alert("数据：" + data + "\n状态：" + status);
-                            });
-
-                    }
-                },
-                dltdrvdot: function (dot) {
-                    var self = this
-                    var mymessage = confirm("确定删除设备 " + self.drvname + " 中的 " + dot + " 数据点？");
-                    if (mymessage == true) {
-                        $.post("/admin/drvmag",
-                            {
-                                type: "dltdrvdot",
-                                dotname: dot,
-                            },
-                            function (data, status) {
-                                alert("数据：" + data + "\n状态：" + status);
-                            })
-                    }
-                    else if (mymessage == false) {
                     }
                 }
             }
