--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 [[template "top.html" .]]
 
 <!-- MAIN -->
-<div class="content">
+<div class="content" id="app">
 	<div class="page-header">
 		<h1 class="title">总体预览</h1>
 		<ol class="breadcrumb">
@@ -9,36 +9,79 @@
 		</ol>
 		<!-- Start Page Header Right Div -->
 		<div class="right">
+			<div class="btn-group" role="group" aria-label="...">
+				<button type="button" class="btn btn-icon btn-light" @click="list = true">
+					<i class="fa fa-th-list"></i>
+				</button>
+				<button type="button" class="btn btn-icon btn-light" @click="list = false">
+					<i class="fa fa-th"></i>
+				</button>
+			</div>
 		</div>
 		<!-- End Page Header Right Div -->
 
 	</div>
 	<!-- OVERVIEW -->
-	<div class="row" id="app">
-		<div class="col-sm-4" v-for="v in ob.Drv">
-			<div class="panel" style="box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5);">
-				<div class="panel-title">
-					<span class="badge" style="float: left;position:absolute;text-align: right;right: 5%;">
-						<a type="button" :href="'/admin/drvshow?user='+ob.User+'&drv=' + v.Drv.Name">查看详细信息</a>
-					</span> {{v.Drv.Name}}
+
+	<div v-if="list">
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<td>设备名称</td>
+					<td>设备类型</td>
+					<td>传感器节点</td>
+					<td>控制器节点</td>
+					<td>联锁控制链</td>
+					<td>监控设备点</td>
+					<td>更新时间</td>
+					<td>操作</td>
+				</tr>
+			</thead>
+			<tbody>
+				<tr v-for="v in ob.Drv">
+					<td>
+						{{v.Drv.Name}}
+					</td>
+					<td>{{v.Drv.Packtype}}</td>
+					<td>{{v.Sensornum}}</td>
+					<td>{{v.IOnum}}</td>
+					<td>{{v.Logicnum}}</td>
+					<td>{{v.Videonum}}</td>
+					<td>{{v.Flashtime}}</td>
+					<td>
+						<a type="button" :href="'/web/drvshow?user='+ob.User+'&drv=' + v.Drv.Name">查看详细信息</a>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+	<div v-else>
+		<div class="row">
+			<div class="col-sm-4" v-for="v in ob.Drv">
+				<div class="panel" style="box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5);">
+					<div class="panel-title">
+						<span class="badge" style="float: left;position:absolute;text-align: right;right: 5%;">
+							<a type="button" :href="'/web/drvshow?user='+ob.User+'&drv=' + v.Drv.Name">查看详细信息</a>
+						</span> {{v.Drv.Name}}
+					</div>
+					<div class="panel-body">
+						<ul class="basic-list">
+							<li>传感器节点
+								<span class="right label label-primary">{{v.Sensornum}}</span>
+							</li>
+							<li>控制器节点
+								<span class="right label label-primary">{{v.IOnum}}</span>
+							</li>
+							<li>联锁控制链
+								<span class="right label label-primary">{{v.Logicnum}}</span>
+							</li>
+							<li>监控设备点
+								<span class="right label label-primary">{{v.Videonum}}</span>
+							</li>
+						</ul>
+					</div>
+					<div class="panel-footer">更新时间：{{v.Flashtime}}</div>
 				</div>
-				<div class="panel-body">
-					<ul class="basic-list">
-						<li>传感器节点
-							<span class="right label label-primary">{{v.Sensornum}}</span>
-						</li>
-						<li>控制器节点
-							<span class="right label label-primary">{{v.IOnum}}</span>
-						</li>
-						<li>联锁控制链
-							<span class="right label label-primary">{{v.Logicnum}}</span>
-						</li>
-						<li>监控设备点
-							<span class="right label label-primary">{{v.Videonum}}</span>
-						</li>
-					</ul>
-				</div>
-				<div class="panel-footer">更新时间：{{v.Flashtime}}</div>
 			</div>
 		</div>
 	</div>
@@ -47,14 +90,15 @@
 			el: '#app',
 			data: {
 				ob: { User: "", Drv: [] },
+				list: false
 			},
 			methods: {
-
+				
 			},
 			created: function () {
 				var self = this
 				console.log("获取用户设备信息")
-				$.post("/admin",
+				$.post("/web/",
 					{
 						type: "getreal",
 					},
@@ -67,3 +111,4 @@
 	</script>
 	<!-- Basic Single Date Picker -->
 	<!-- END MAIN -->
+	[[template "bottom.html" .]]
