--- a/views/top.html
+++ b/views/top.html
@@ -23,7 +23,7 @@
 
 			<!-- Start App Logo -->
 			<div class="applogo">
-				<a href="/admin/" class="logo">龙腾伟业</a>
+				<a href="/web/" class="logo">龙腾伟业</a>
 			</div>
 			<!-- End App Logo -->
 
@@ -45,25 +45,7 @@
 					</a>
 					<ul class="dropdown-menu dropdown-menu-list dropdown-menu-right">
 						<li role="presentation" class="dropdown-header">Profile</li>
-						<li>
-							<a href="#">
-								<i class="fa falist fa-inbox"></i>Inbox
-								<span class="badge label-danger">4</span>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<i class="fa falist fa-file-o"></i>Files</a>
-						</li>
-						<li>
-							<a href="#">
-								<i class="fa falist fa-wrench"></i>Settings</a>
-						</li>
-						<li class="divider"></li>
-						<li>
-							<a href="#">
-								<i class="fa falist fa-lock"></i> Lockscreen</a>
-						</li>
+						
 						<li>
 							<a href="#">
 								<i class="fa falist fa-power-off"></i> Logout</a>
@@ -81,27 +63,29 @@
 			<ul class="sidebar-panel nav">
 				<li class="sidetitle">控制台</li>
 				<li>
-					<a href="/admin/">
+					<a href="/web/">
 						<span class="icon color5">
 							<i class="fa fa-home"></i>
 						</span>总览
 
 					</a>
 				</li>
+				[[if eq .name "admin"]]
 				<li>
-					<a href="/admin/manage">
+					<a href="/web/usermag">
 						<span class="icon color5">
 							<i class="fa fa-user"></i>
 						</span>用户管理</a>
 				</li>
 				<li>
-					<a href="/admin/drvmag">
+					<a href="/web/drvmag">
 						<span class="icon color5">
 							<i class="fa fa-dashboard"></i>
 						</span>设备管理</a>
 				</li>
+				[[end]]
 				<li>
-					<a href="/admin/video">
+					<a href="/web/video">
 						<span class="icon color5">
 							<i class="fa fa-camera-retro"></i>
 						</span>监控设备</a>
