--- a/views/cssjs.html
+++ b/views/cssjs.html
@@ -1,7 +1,7 @@
 <!-- ========== Css Files ========== -->
 <link href="../static/css/root.css" rel="stylesheet">
 <link href="https://cdn.bootcss.com/bootstrap-datepicker/1.8.0/css/bootstrap-datepicker.min.css" rel="stylesheet">
-
+<link rel="stylesheet" type="text/css" href="../static/css/daterangepicker.css"/>
 <!-- 
 jQuery Library
 -->
@@ -56,3 +56,5 @@ Moment.js
 <link href="https://cdn.bootcss.com/video.js/6.3.3/video-js.min.css" rel="stylesheet">
 <script src="https://open.ys7.com/sdk/js/1.3/ezuikit.js"></script>
 <script src="https://cdn.bootcss.com/echarts/4.1.0.rc2/echarts-en.common.min.js"></script>
+<script src="../static/js/moment.js"></script>
+<script src="../static/js/daterangepicker.js"></script>
