--- a/views/drvpic.html
+++ b/views/drvpic.html
@@ -5,20 +5,23 @@
 <script type="text/javascript" src="../static/js/drvpic.js"></script>
 <link rel="stylesheet" type="text/css" href="../static/js/context/context.standalone.css">
 <style type="text/css">
-    #canvas {
-        position: fixed;
-
+    #dragroom {
         z-index: -99;
+        width: 900px;
+        height: 450px;
+        padding: 5px;
+        position: absolute;
+        resize: both;
+        overflow: hidden;
         border: 2px dashed #ccc;
-        padding: 10px;
         background: #fff;
     }
 
     .transparent {
-        filter: alpha(opacity=40);
-        -moz-opacity: 0.5;
-        -khtml-opacity: 0.5;
-        opacity: 0.5;
+        filter: alpha(opacity=0);
+        -moz-opacity: 0.8;
+        -khtml-opacity: 0.8;
+        opacity: 0.8;
     }
 
     .boxs {
@@ -29,7 +32,6 @@
         top: 30px;
         left: 30px;
         z-index: 99;
-        box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 5px;
     }
 
     .boxs .bg {
@@ -38,76 +40,68 @@
         background-color: #26a65b;
     }
 
+    .boxs:hover .coors {
+        display: block;
+    }
+    .boxs:hover .tip {
+        display: block;
+    }
+    .boxs .tip {
+        display: none;
+        width: 100%;
+        padding-top: 5px;
+        height: 30px;
+        text-align: center;
+        position: absolute;
+        overflow: hidden;
+        left: 0px;
+        top: 0px;
+
+        color: #26a65b;
+        background-color: rgb(255, 255, 255);
+    }
     .boxs .coors {
+        display: none;
         width: 5px;
         height: 5px;
         overflow: hidden;
         cursor: se-resize;
         position: absolute;
+        border: 1px solid;
+        border-radius: 5px;
         right: 0;
         bottom: 0;
         background-color: rgba(255, 0, 0, 0.658);
     }
 
+
     .boxs .contentpic {
         position: absolute;
-        right: 10px;
+
         top: 50%;
         z-index: 99;
         text-align: center;
         font: bold 14px/1.5em simsun;
         color: #000;
     }
-
-    #debug {
-        position: absolute;
-        right: 10px;
-        top: 10px;
-        z-index: 88;
-        border: 1px solid #ccc;
-        width: 100px;
-        height: 100px;
-        background: #fff;
-    }
-
-    #toolbar {
-        position: absolute;
-        left: 10px;
-        top: 10px;
-        z-index: 88;
-    }
 </style>
 <!-- MAIN -->
 <div class="content" id="app">
     <!-- <pre id="debug"></pre> -->
-    <div class="row">
-        <div class="col-sm-1">
-            <input type="text" id="bk" name="image" />
-        </div>
-        <div class="col-sm-1">
-            <input type="button" class="btn btn-primary" @click="uploadbk" value="保存" />
-        </div>
-        <div class="col-sm-1">
-            <select class="form-control" id="dotname">
-                <template v-for="c in ob">
-                    <option :value="c.Name+'：'+c.Value">{{c.Name}}</option>
-                </template>
-            </select>
-        </div>
-        <div class="col-sm-1">
-            <input type="button" class="btn btn-primary" value="添加数据点" id="btn_add"/>
-        </div>
-        <div class="col-sm-1">
-                <input type="button" class="btn btn-primary" value="添加视频" id="btn_addvideo" />
-            </div>
-        <div class="col-sm-1">
-            <input type="button" class="btn btn-primary" value="锁定区域" id="btn_lock" />
-        </div>
-        <div class="col-sm-1">
-            <input type="button" class="btn btn-primary" value="获取数据" id="btn_save"  />
-        </div>
-    </div>
-    <div id="canvas" style="width: 80%;height: 80%;">
+
+    <a href="#" class="btn btn-default btn-xs" @click="uploadbk">
+        <i class="fa fa-picture-o"></i>设置背景</a>
+    <a href="#" class="btn btn-default btn-xs" id="btn_add" @click="adddot">
+        <i class="fa fa-picture-o"></i>添加数据点</a>
+    <a href="#" class="btn btn-default btn-xs" id="btn_addvideo">
+        <i class="fa fa-picture-o"></i>添加视频</a>
+    <a href="#" class="btn btn-default btn-xs" id="btn_lock">
+        <i class="fa fa-picture-o"></i>锁定区域</a>
+    <a href="#" class="btn btn-default btn-xs" id="btn_save">
+        <i class="fa fa-picture-o"></i>获取数据</a>
+    <br>
+    <br>
+    <div id="dragroom">
         <img :src="bksrc" height="100%" width="100%" />
     </div>
 </div>
@@ -134,17 +128,49 @@
         methods: {
             uploadbk: function () {
                 var self = this
-                self.bksrc = $("#bk").val()
+                layer.open({
+                    content: '<input class="form-control input-sm" type="text" id="bk" name="image" />',
+                    yes: function (index, layero) {
+                        self.bksrc = $("#bk").val()
+                        layer.close(index);
+                    }
+                });
             },
-            creatnewdotbox:function(){
+            creatnewdotbox: function () {
                 var self = this
-                console.log($("#dotname").text()+":"+$("#dotname").val())
+                console.log($("#dotname").text() + ":" + $("#dotname").val())
                 creategd({
-                text: $("#dotname").text()+":"+$("#dotname").val(),
-                width: 100,
-                height: 100
-            });
+                    text: $("#dotname").text() + ":" + $("#dotname").val(),
+                    width: 100,
+                    height: 100
+                });
+            },
+            adddot: function () {
+                var self = this
+                var htmlstr = '<select class="form-control input-sm" id="dotnames">'
+                for (c in self.ob) {
+                    htmlstr += '<option :value="'+self.ob[c].Value + '">' + self.ob[c].Name + '</option>'
+                }
+                htmlstr += '</select>'
+                layer.open({
+                    content: htmlstr,
+                    yes: function (index, layero) {
+                        createBox({
+                            text: $("#dotnames").val(),
+                            width: 100,
+                            height: 100,
+                            tip:$("#dotnames").selectedIndex
+                        })
+                        layer.close(index);
+                    }
+                });
+            },
+            ct: function (event) {
+                var el = event.target
+                console.log(el.x)
+
             }
         }
     })
+    draginit($("#dragroom"))
 </script> [[template "bottom.html" .]]
