--- a/views/muxchart.html
+++ b/views/muxchart.html
@@ -5,31 +5,76 @@
     <div class="page-header">
         <h1 class="title">{{ ob.Drvname }}</h1>
         <ol class="breadcrumb">
-            <li class="active">混合数据关系分析</li>
+            <li class="active">选择数据点：</li>
         </ol>
 
         <!-- Start Page Header Right Div -->
         <div class="right">
             <div class="btn-group" role="group" aria-label="...">
-
+                <button type="button" class="btn btn-icon btn-light" @click="chartortable = true">
+                    <i class="fa fa-th-list"></i>
+                </button>
+                <button type="button" class="btn btn-icon btn-light" @click="chartortable = false">
+                    <i class="fa fa-th"></i>
+                </button>
+                <button type="button" class="btn btn-icon btn-light" @click="tableindex++">
+                    <i class="fa fa-th"></i>
+                </button>
+                <button type="button" class="btn btn-icon btn-light" @click="tableindex--">
+                    <i class="fa fa-th"></i>
+                </button>
             </div>
         </div>
         <!-- End Page Header Right Div -->
-
     </div>
     <!-- OVERVIEW -->
     <div>
         <div class="row">
-            <div class="col-md-2 col-sm-3 col-xs-4" v-for="v in ob.Dot" v-if="v.Type== 3 || v.Type == 4">
-                <div class="checkbox checkbox-info checkbox-circle">
-                    <input :id="'#/checkbox88/'+v.Name" type="checkbox" name="selectdrv" :value="v.Name" @click="getvalue(drv,v.Name)">
-                    <label :for="'#/checkbox88/'+v.Name">
-                        {{v.Name}}
-                    </label>
+            <div class="col-md-2">
+                <template v-for="v in ob.Dot" v-if="v.Type== 3 || v.Type == 4">
+                    <div class="checkbox checkbox-info checkbox-circle">
+                        <input :id="'#/checkbox88/'+v.Name" type="checkbox" name="selectdrv" :value="v.Name" @click="getvalue(drv,v.Name)">
+                        <label :for="'#/checkbox88/'+v.Name">
+                            {{v.Name}}
+                        </label>
+                    </div>
+                </template>
+            </div>
+            <div class="col-md-10">
+                <div v-if="chartortable">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <td>编号</td>
+                                <template v-for="d in alldotvalue">
+                                    <td>{{d.Name}}</td>
+                                </template>
+                                <td>更新时间</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr v-for="(item, index) in alldotvalue[0].Data">
+                                <template v-if="index > tableindex*10 && index <= (tableindex*10+10)">
+                                    <td>
+                                        {{index}}
+                                    </td>
+                                    <template v-for="d in alldotvalue">
+                                        <td>{{d.Data[index]}}</td>
+                                    </template>
+                                    <td>
+                                        {{alldotvalue[0].Time[index]}}
+                                    </td>
+                                </template>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div v-else>
+                    <div id="main" style="width: 100%;height:400px;"></div>
                 </div>
             </div>
         </div>
-        <div id="main" style="width: 100%;height:400px;"></div>
+
     </div>
 </div>
 <!-- END OVERVIEW -->
@@ -53,7 +98,27 @@
             ob: tmp,
             drv: [[.drv]],
             dot: "",
+            tableindex: 0,
+            alldotvalue: [],
+            chartortable: false,
             vob: JSON.parse([[.video]])
+        },
+        created: function () {
+            var self = this
+            var starttime = new Date(new Date().getTime())
+            var stoptime = new Date(new Date().getTime() + 24 * 60 * 60 * 1000)
+            var sstime = starttime.getFullYear() + '/' + (starttime.getMonth() + 1) + '/' + starttime.getDate()
+            var sttime = stoptime.getFullYear() + '/' + (stoptime.getMonth() + 1) + '/' + stoptime.getDate()
+            $.post("/web/muxchart",
+                {
+                    type: "dotvalue",
+                    drv: self.drv,
+                    start: sstime,
+                    stop: sttime
+                },
+                function (data, status) {
+                    self.alldotvalue = JSON.parse(data)
+                });
         },
         methods: {
             getvalue: function (drv, dot) {
@@ -61,24 +126,24 @@
                 var obj = document.getElementById('#/checkbox88/' + dot);
                 if (obj.checked) {
                 } else {
-                    var index  = 0
-                    for(i=0;i<xxitem.length;i++){
-                        if(xxitem[i].name === dot){
+                    var index = 0
+                    for (i = 0; i < xxitem.length; i++) {
+                        if (xxitem[i].name === dot) {
                             break
                         }
                         index++
                     }
-                    xxitem.splice(index, 1);                
-                    console.log(index,xxitem)
-                    myChart.setOption({ 
+                    xxitem.splice(index, 1);
+                    console.log(index, xxitem)
+                    myChart.setOption({
                         xAxis: {
-                                type: 'category',
-                                boundaryGap: false,
-                                data: JSON.parse(data).Time
-                            },                           
-                            series: xxitem
-                        },true);
-                        return
+                            type: 'category',
+                            boundaryGap: false,
+                            data: JSON.parse(data).Time
+                        },
+                        series: xxitem
+                    }, true);
+                    return
                 }
                 if (drv == "S" && dot == "S") { }
                 else {
